--- a/src/hr_management/user/templates/static/base.css
+++ b/src/hr_management/user/templates/static/base.css
@@ -21,6 +21,7 @@ height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    position: fixed;
 }
 .navbar-title {
     padding: 15px;
