--- a/src/hr_management/user/templates/base.html
+++ b/src/hr_management/user/templates/base.html
@@ -5,15 +5,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{% static 'static/base.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}">
     <title>Human Resources Inc.</title> 
+
+    {% block extra_styles %}
+    <!-- Stylesheet created specifically for Employee Home Layout in employee_home.html --> 
+    {% endblock %}
+
 </head>
 <body>
     <div class="division-1">
         <div class="navbar-title">Human Resources Inc.</div>
         <div class="logo-container">
-            <img src="{% static 'static/penguin_logo.png' %}" alt="Application Logo" class="navbar-logo">
+            <img src="{% static 'images/penguin_logo.png' %}" alt="Application Logo" class="navbar-logo">
         </div>
         {% include "navbar.html" %}
     </div>
@@ -21,7 +27,7 @@
 
     <div class="division-2">
         <div class="dropdown">
-        <img src="{% static 'static/auth.png' %}" alt="Authentication" class="login-icon" type="button" data-bs-toggle="dropdown">
+        <img src="{% static 'images/auth.png' %}" alt="Authentication" class="login-icon" type="button" data-bs-toggle="dropdown">
         <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="{% url 'home' %}">Home</a></li>
         <li><a class="dropdown-item" href="{% url 'logout_user' %}">Logout</a></li>
@@ -36,9 +42,8 @@
         {% endif %}
 
 
-        <!-- Button on the bottom of page opens user manual-->
-        <button class="help-button">?</button>
-
+        
+        
 
     <!-- Print messages -->
     {% if messages %}
@@ -49,10 +54,11 @@
             </div>
         {% endfor %}
     {% endif %}
+
     <div class="division-3">{% block content %}  {% endblock %}</div>
 
-
-
+    <!-- Button on the bottom of page opens user manual-->
+    <button class="help-button">?</button>
 
     </div>
 
