--- a/src/hr_management/user/templates/home.html
+++ b/src/hr_management/user/templates/home.html
@@ -5,14 +5,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{% static 'static/base.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}">
     <title>Home</title> 
 </head>
-
-
-        <!-- Button on the bottom of page opens user manual-->
-        <button class="help-button">?</button>
 
 
     <!-- Print messages -->
@@ -25,11 +22,11 @@
         {% endfor %}
     {% endif %}
 
-
-        <div >
+    <div>
+        <div>
             <br/><br/>
             <div class="logo-container">
-                <img src="{% static 'static/penguin_logo.png' %}" alt="Application Logo" class="navbar-logo">
+                <img src="{% static 'images/penguin_logo.png' %}" alt="Application Logo" class="navbar-logo">
             </div>
                 <br/><br/>
                 <div class="col-md-6 offset-md-3">
@@ -51,6 +48,8 @@
                 </div>
         </div>
             
+        <!-- Button on the bottom of page opens user manual-->
+        <button class="help-button">?</button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
