Nov 17: Calendar's template changes and publication views

--- a/src/hr_management/calendar_app/templates/calendar.html
+++ b/src/hr_management/calendar_app/templates/calendar.html
@@ -2,6 +2,9 @@
 
 {% load static %}
 
+<!-- TODO Append + 1 day towards the end of submitted pubs & reqs -->
+
+
 <html>
 <head>
     <meta charset="UTF-8">
