Added base template to publications page

--- a/src/hr_management/publication/templates/index.html
+++ b/src/hr_management/publication/templates/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
 
+{% extends "base.html" %}
 {% load static %}
 
+{% block content %}
 <html>
 <head>
 
@@ -29,3 +30,4 @@
 
 
 </html>
+{% endblock %}
