Show current logged user's requests. Added base.html's content to all sites
Added base.html, request view shows current user only , create request sends by default current logged user's username as employee_id.  Changed base.html title into a block content allowing all sites to have their unique titles.

--- a/src/hr_management/calendar_app/templates/calendar.html
+++ b/src/hr_management/calendar_app/templates/calendar.html
@@ -1,6 +1,8 @@
-<!DOCTYPE html>
 
+{% extends "base.html" %}
 {% load static %}
+
+{% block content %}
 
 <!-- TODO Append + 1 day towards the end of submitted pubs & reqs -->
 
@@ -92,6 +94,13 @@
     document.addEventListener('DOMContentLoaded', function(){
         var calendarUI = document.getElementById("calendar")
         var calendar = new FullCalendar.Calendar(calendarUI, {
+
+            // Set all day true so it includes final (end) date fully
+            // instead of [start, end) -> [start, end]
+            // Set Time Zone to use the same as Django's settings:
+            timeZone: 'UTC',
+
+            
             // Show list of events (absent days)
             events: [
                 // Obtaining absent employees
@@ -126,3 +135,5 @@
 </script>
 
 </html>
+
+{% endblock %}
