--- a/src/hr_management/publication/templates/edit_publication.html
+++ b/src/hr_management/publication/templates/edit_publication.html
@@ -6,13 +6,13 @@
 <head>
 
     <meta charset="UTF-8">
-    <title>Edit Publication</title>
+    <title> {% block title %} Edit Publication {% endblock %} </title>
     <link rel="stylesheet" type="text/css" href="{% static 'publication/style.css' %}">
 
 </head>
 
 <body>
-    <h1> Edit Publication </h1>
+    <h1> &#8203; </h1>
 
     <section>
         <h2>Edit Publication</h2>
