--- a/src/hr_management/user/templates/navbar.html
+++ b/src/hr_management/user/templates/navbar.html
@@ -5,7 +5,7 @@
       <ul>
 
         {% if user.is_staff %}
-          <!--Admin Navigartion Bar-->    
+          <!--Admin Navigation Bar-->    
           <p class="nav-item">
             <a class="nav-link" href="{% url 'admin_home' %}">Home</a>
           </p>
@@ -24,7 +24,7 @@
 
 
         {% else %}
-          <!-- Employee Navigartion Bar-->    
+          <!-- Employee Navigation Bar-->    
           <p class="nav-item">
             <a class="nav-link" href="{% url 'employee_home' %}">Home</a>
           </p>
@@ -44,5 +44,5 @@
       </div>
 </nav>
 
-<!-- Create a breack line between the two navbars -->
+<!-- Create a break line between the two navbars -->
 <hr>
