Resolved conflicts between different url updating branches

--- a/src/hr_management/user/templates/employees/employee_home.html
+++ b/src/hr_management/user/templates/employees/employee_home.html
@@ -55,7 +55,8 @@
             </div>
 
             <div class="subtitle" id="subtitle3"><br/>
-                <button id="request-button">Request Day Off</button>
+                <a href="{% url 'req_leave:submit_request' %}" class="btn btn-warning" id="request-button">Request Day Off</a>
+                
                 <br/><br/>
                 <p>Personal Calendar goes here ...</p>
             </div>
