--- a/src/hr_management/user/templates/navbar.html
+++ b/src/hr_management/user/templates/navbar.html
@@ -13,13 +13,13 @@
             <a class="nav-link" href="{% url 'manage_employees' %}">Employees</a>
           </p>
           <p class="nav-item">
-            <a class="nav-link" href="{% url 'req_leave:manage_request' %}">Requests</a>
+            <a class="nav-link" href="{% url 'manage_req' %}">Requests</a>
           </p> 
           <p class="nav-item">
-            <a class="nav-link" href="{% url 'publication:view_publications' %}">Publications</a>
+            <a class="nav-link" href="{% url 'publications' %}">Publications</a>
           </p>      
           <p class="nav-item">
-            <a class="nav-link" href="{% url 'calendar_app:view_calendar' %}">Calendar</a>
+            <a class="nav-link" href="{% url 'calendar' %}">Calendar</a>
           </p>   
 
 
@@ -32,10 +32,10 @@
             <a class="nav-link" href="{% url 'req_leave:submit_request' %}">Requests</a>
           </p> 
           <p class="nav-item">
-            <a class="nav-link" href="{% url 'publication:view_publications' %}">Publications</a>
+            <a class="nav-link" href="{% url 'publications' %}">Publications</a>
           </p>      
           <p class="nav-item">
-            <a class="nav-link" href="{% url 'calendar_app:view_calendar' %}">Calendar</a>
+            <a class="nav-link" href="{% url 'calendar' %}">Calendar</a>
           </p>   
         {% endif %}
       
@@ -44,5 +44,5 @@
       </div>
 </nav>
 
-<!-- Create a breack line between the two navbars -->
+<!-- Create a break line between the two navbars -->
 <hr>
