Modified navbar.html and admin_home.html url's to go to create_publication instead of view_publications. Also, added the corresponding create_publication url to urls.py

--- a/src/hr_management/user/templates/administrator/admin_home.html
+++ b/src/hr_management/user/templates/administrator/admin_home.html
@@ -22,9 +22,9 @@
                 <a href="{% url 'calendar' %}"><button class="btn btn-info" type="button">View Calendar</button></a>
             </div>
             <div class="division-4-item">
-                <h4>View Publications</h4>
+                <h4>Create Publications</h4>
                 <p>View company publications. Add, edit and remove publications</p>
-                <a href="{% url 'publications' %}"><button class="btn btn-info" type="button">Publications</button></a>
+                <a href="{% url 'create_publication' %}"><button class="btn btn-info" type="button">Publications</button></a>
             </div>
         </div>
    </div>
