--- a/src/hr_management/user/templates/navbar.html
+++ b/src/hr_management/user/templates/navbar.html
@@ -16,7 +16,7 @@
             <a class="nav-link" href="{% url 'manage_req' %}">Requests</a>
           </p> 
           <p class="nav-item">
-            <a class="nav-link" href="{% url 'publications' %}">Publications</a>
+            <a class="nav-link" href="{% url 'create_publication' %}">Publications</a>
           </p>      
           <p class="nav-item">
             <a class="nav-link" href="{% url 'calendar' %}">Calendar</a>
