Modified and added corresponding req_leave url's to Admin and Employee home pages, and navbar.

--- a/src/hr_management/user/templates/employees/employee_home.html
+++ b/src/hr_management/user/templates/employees/employee_home.html
@@ -55,7 +55,7 @@
             </div>
 
             <div class="subtitle" id="subtitle3"><br/>
-                <a href="{% url 'req_leave:submit_request' %}" class="btn btn-warning" id="request-button">Request Day Off</a>
+                <a href="{% url 'submit_req' %}" class="btn btn-warning" id="request-button">Request Day Off</a>
                 
                 <br/><br/>
                 <p>Personal Calendar goes here ...</p>
