--- a/src/hr_management/user/templates/navbar.html
+++ b/src/hr_management/user/templates/navbar.html
@@ -24,12 +24,12 @@
 
 
         {% else %}
-          <!-- Employee Navigartion Bar-->    
+          <!-- Employee Navigation Bar-->    
           <p class="nav-item">
             <a class="nav-link" href="{% url 'employee_home' %}">Home</a>
           </p>
           <p class="nav-item">
-            <a class="nav-link" href="{% url 'req_leave:submit_request' %}">Requests</a>
+            <a class="nav-link" href="{% url 'submit_req' %}">Requests</a>
           </p> 
           <p class="nav-item">
             <a class="nav-link" href="{% url 'publications' %}">Publications</a>
