Fixed block title

--- a/src/hr_management/publication/templates/create_publication.html
+++ b/src/hr_management/publication/templates/create_publication.html
@@ -7,7 +7,7 @@
 <head>
 
     <meta charset="UTF-8">
-    <title> {% block content %} Create Publication {% endblock %} </title>
+    <title> {% block title %} Create Publication {% endblock %} </title>
     <link rel="stylesheet" type="text/css" href="{% static 'publication/style.css' %}">
 
 </head>
