Some visual modifactions
edited publication page and employee pages

--- a/src/hr_management/publication/static/publication/style.css
+++ b/src/hr_management/publication/static/publication/style.css
@@ -6,8 +6,8 @@ body {
 }
 
 h1 {
-    background-color: #033047;
-    color: #fff;
+    background-color: #03304700;
+    color: #033047;
     padding: 20px;
     text-align: center;
 }
@@ -48,14 +48,7 @@ p {
 }
 
 /* Buttons */
-.btn {
-    border: 2px solid black;
-    background-color: white;
-    color: black;
-    padding: 14px 28px;
-    font-size: 16px;
-    cursor: pointer;
-  }
+
 
 .edit-button {
     border: 1px solid #ffb703;
@@ -69,6 +62,7 @@ p {
 
 .edit-button:hover {
     background-color: #e1a201;
+    
 
 }
 
