--- a/src/hr_management/user/templates/administrator/register_employee.html
+++ b/src/hr_management/user/templates/administrator/register_employee.html
@@ -24,10 +24,10 @@
 	{{ form.as_p }}
 
 	<br/>
-	  <button type="submit" class="btn btn-secondary">Register Employee</button>
+	  <button type="submit" class="btn btn-warning">Register Employee</button>
 	</form>
 	<br/>
-  	<a href="{% url 'manage_employees' %}" class="btn btn-secondary">Back</a>
+  	<a href="{% url 'manage_employees' %}" class="btn btn-danger">Back</a>
 
 </div>
 
