--- a/src/hr_management/user/templates/employees/edit_profile.html
+++ b/src/hr_management/user/templates/employees/edit_profile.html
@@ -16,6 +16,8 @@
     <button type="submit" class="btn btn-warning">Submit</button>
     
     </form>
+    <br/>
+    <a href="{% url 'employee_home' %}" class="btn btn-danger">Back</a>
     
 </div>
 
