--- a/src/hr_management/publication/static/publication/style.css
+++ b/src/hr_management/publication/static/publication/style.css
@@ -57,9 +57,10 @@ p {
     cursor: pointer;
   }
 
-.edit-button {
-    border: 1px solid #ffb703;
+#edit-button {
+    /* border: 1px solid #ffb703; */
     background-color: #ffb703;
+    color: black;
     display: inline-block;
     width: 48px;
     margin-top: 3px;
@@ -67,14 +68,15 @@ p {
     transition: 0.16s;
 }
 
-.edit-button:hover {
+/* .edit-button:hover {
     background-color: #e1a201;
 
-}
+} */
 
-.remove-button {
-    border: 1px solid #fb8500;
+#remove-button {
+    /* border: 1px solid #fb8500; */
     background-color: #fb8500;
+    color: black;
     display: inline-block;
     width: 107px;
     margin-top: 5px;
@@ -82,8 +84,8 @@ p {
     transition: 0.16s;
 }
 
-.remove-button:hover {
+/* .remove-button:hover {
     background-color: #e07800;
 
-}
+} */
 
