--- a/src/hr_management/publication/templates/create_publication.html
+++ b/src/hr_management/publication/templates/create_publication.html
@@ -42,16 +42,18 @@
         <p>  Published: {{post.publication_date}} </p>
 
         <!-- Edit Button -->    <!-- Text Decoration none to remove underline -->
-        <a class="btn edit-button" style="text-decoration:none;"
-        href="{% url 'publication:edit_publication' id=post.id %}">Edit </a>
 
+        <button class="btn btn-warning"  id= "edit-button"
+        href="{% url 'publication:edit_publication' id=post.id %}">Edit</button>   
+        <br>
+        <hr>
         <!-- Remove Button -->
         <form method="post" 
         action="{% url 'publication:remove_publication' id=post.id %}">
 
             {% csrf_token %}
+            <a type="submit" class="btn btn-danger" id="remove-button">Remove</a>
 
-            <button type="submit" class="btn remove-button">Remove</button>
 
         </form>
 
