--- a/src/hr_management/user/templates/navbar.html
+++ b/src/hr_management/user/templates/navbar.html
@@ -1,3 +1,10 @@
+{% load static %}
+
+<div class="navbar-title">Human Resources Inc.</div>
+        <div class="logo-container">
+            <img src="{% static 'images/penguin_logo.png' %}" alt="Application Logo" class="navbar-logo">
+        </div>
+
 <hr>
 
 <nav class="navbar-section">
