--- a/src/hr_management/user/templates/base.html
+++ b/src/hr_management/user/templates/base.html
@@ -18,11 +18,8 @@
 
 </head>
 <body>
+    {% comment %} make navbar hide {% endcomment %}
     <div class="division-1">
-        <div class="navbar-title">Human Resources Inc.</div>
-        <div class="logo-container">
-            <img src="{% static 'images/penguin_logo.png' %}" alt="Application Logo" class="navbar-logo">
-        </div>
         {% include "navbar.html" %}
     </div>
 
@@ -43,10 +40,6 @@
         </p>
         {% endif %}
 
-
-        
-        
-
     <!-- Print messages -->
     {% if messages %}
         {% for message in messages %}
@@ -61,10 +54,10 @@
 
     <!-- Button on the bottom of page opens user manual-->
     <button class="help-button">?</button>
-
+    
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-
+    {{ redirect_to_login_immediately }}
 </body>
 </html>
