Nav bar title chanes

--- a/src/hr_management/user/templates/navbar.html
+++ b/src/hr_management/user/templates/navbar.html
@@ -20,7 +20,7 @@
             <a class="nav-link" href="{% url 'manage_employees' %}">Employees</a>
           </p>
           <p class="nav-item">
-            <a class="nav-link" href="{% url 'manage_req' %}">Requests</a>
+            <a class="nav-link" href="{% url 'manage_req' %}">Manage Requests</a>
           </p> 
           <p class="nav-item">
             <a class="nav-link" href="{% url 'create_publication' %}">Publications</a>
@@ -36,7 +36,7 @@
             <a class="nav-link" href="{% url 'employee_home' %}">Home</a>
           </p>
           <p class="nav-item">
-            <a class="nav-link" href="{% url 'submit_req' %}">Requests</a>
+            <a class="nav-link" href="{% url 'submit_req' %}">Send Requests</a>
           </p> 
           <p class="nav-item">
             <a class="nav-link" href="{% url 'publications' %}">Publications</a>
