Changed navbar link to more specific destination

--- a/src/hr_management/user/templates/navbar.html
+++ b/src/hr_management/user/templates/navbar.html
@@ -7,7 +7,7 @@
         {% if user.is_staff %}
           <!--Admin Navigation Bar-->    
           <p class="nav-item">
-            <a class="nav-link" href="{% url 'admin_home' %}">Home</a>
+            <a class="nav-link" href="{% url 'admin_home' %}">Dashboard</a>
           </p>
           <p class="nav-item">
             <a class="nav-link" href="{% url 'manage_employees' %}">Employees</a>
