--- a/src/hr_management/user/templates/administrator/manage_employees.html
+++ b/src/hr_management/user/templates/administrator/manage_employees.html
@@ -34,6 +34,7 @@
         <form method="get" action="{% url 'manage_employees' %}">
           <div class="input-group">
             <select class="form-control" name="employees_per_page" id="employeesPerPage" onchange="this.form.submit()">
+              <option value="all" {% if employees_per_page == 'all' %}selected{% endif %}>All</option>
               <option value="10" {% if employees_per_page == 10 %}selected{% endif %}>10</option>
               <option value="20" {% if employees_per_page == 20 %}selected{% endif %}>20</option>
               <option value="50" {% if employees_per_page == 50 %}selected{% endif %}>50</option>
@@ -80,34 +81,36 @@
   <div class="col-md-6">
     <nav aria-label="Page navigation">
       <ul class="pagination">
-        {% if employees.has_previous %}
-          <li class="page-item">
-            <a class="page-link" href="?page=1&employees_per_page={{ employees_per_page }}" aria-label="First">
-              <span aria-hidden="true">&laquo;&laquo;</span>
-            </a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="?page={{ employees.previous_page_number }}&employees_per_page={{ employees_per_page }}" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-            </a>
-          </li>
-        {% endif %}
+        {% if employees_per_page != 'all' %}
+          {% if employees.has_previous %}
+            <li class="page-item">
+              <a class="page-link" href="?page=1&employees_per_page={{ employees_per_page }}" aria-label="First">
+                <span aria-hidden="true">&laquo;&laquo;</span>
+              </a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="?page={{ employees.previous_page_number }}&employees_per_page={{ employees_per_page }}" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+              </a>
+            </li>
+          {% endif %}
 
-        <li class="page-item disabled">
-          <span class="page-link">Page {{ employees.number }} of {{ employees.paginator.num_pages }}</span>
-        </li>
+          <li class="page-item disabled">
+            <span class="page-link">Page {{ employees.number }} of {{ employees.paginator.num_pages }}</span>
+          </li>
 
-        {% if employees.has_next %}
-          <li class="page-item">
-            <a class="page-link" href="?page={{ employees.next_page_number }}&employees_per_page={{ employees_per_page }}" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-            </a>
-          </li>
-          <li class="page-item">
-            <a class="page-link" href="?page={{ employees.paginator.num_pages }}&employees_per_page={{ employees_per_page }}" aria-label="Last">
-              <span aria-hidden="true">&raquo;&raquo;</span>
-            </a>
-          </li>
+          {% if employees.has_next %}
+            <li class="page-item">
+              <a class="page-link" href="?page={{ employees.next_page_number }}&employees_per_page={{ employees_per_page }}" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+              </a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="?page={{ employees.paginator.num_pages }}&employees_per_page={{ employees_per_page }}" aria-label="Last">
+                <span aria-hidden="true">&raquo;&raquo;</span>
+              </a>
+            </li>
+          {% endif %}
         {% endif %}
       </ul>
     </nav>
