Unit Tests. View Request's calendar's CSS has incorrect banner colour.

--- a/src/hr_management/req_leave/templates/request.html
+++ b/src/hr_management/req_leave/templates/request.html
@@ -17,6 +17,17 @@
 <body>
     <h1> Request Leave Page 🐙</h1>
 
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+            <li{% if message.tags %} 
+            class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+
+    {% endif %}
+
+
     <form action="" method="POST"> {% csrf_token %}
 
         {{ request_form|crispy }}
