--- a/src/hr_management/user/templates/administrator/admin_home.html
+++ b/src/hr_management/user/templates/administrator/admin_home.html
@@ -12,7 +12,7 @@
                 <a href="{% url 'manage_employees' %}"><button class="btn btn-info" type="button">Manage Employees</button></a>
             </div>
             <div class="division-4-item">
-                <h4>Mange Requests</h4>
+                <h4>Manage Requests</h4>
                 <p>View and manage employee requests.</p>
                 <a href="{% url 'manage_req' %}"><button class="btn btn-info" type="button">Manage Requests</button></a>
             </div>
