Modified fullcalendar main.css and main.js static links in calendar.html and view_request.html so the calendar would show in the pages.

--- a/src/hr_management/calendar_app/templates/calendar.html
+++ b/src/hr_management/calendar_app/templates/calendar.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'calendar_app/style.css' %}">
     
     <!-- Calendar's Stylesheet -->
-    <link rel="stylesheet" type="text/css" href="{% static 'fullcalendar/lib/main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'calendar_app/fullcalendar/lib/main.css' %}">
 
     <!-- Setting fixed size -->
     <style>
@@ -89,7 +89,7 @@
 </body>
 
 <!-- <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.9/index.global.min.js'></script> -->
-<script src="{% static 'fullcalendar/lib/main.js' %}"></script>
+<script src="{% static 'calendar_app/fullcalendar/lib/main.js' %}"></script>
 
 <!-- Instanciate Full Calendar -->
 <script>
