--- a/src/hr_management/req_leave/templates/view_request.html
+++ b/src/hr_management/req_leave/templates/view_request.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'req_leave/style.css' %}">
 
     <!-- Calendar's Stylesheet -->
-    <link rel="stylesheet" type="text/css" href="{% static 'fullcalendar/lib/main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'calendar_app/fullcalendar/lib/main.css' %}">
     
     <!-- Setting fixed size -->
     <style>
@@ -97,7 +97,7 @@
 
 </body>
 
-<script src="{% static 'fullcalendar/lib/main.js' %}"></script>
+<script src="{% static 'calendar_app/fullcalendar/lib/main.js' %}"></script>
 
 <!-- Instanciate Full Calendar -->
 <script>
