Updated link in non-authenticated user condition. Nevertheless, this conditional block might be deleted soon altogether.

--- a/src/hr_management/user/templates/base.html
+++ b/src/hr_management/user/templates/base.html
@@ -38,7 +38,7 @@
 
         {% else %}
         <p class="nav-item">
-            <a class="nav-link" href="{% url 'home' %}">Login</a>
+            <a class="nav-link" href="{% url 'login' %}">Login</a>
         </p>
         {% endif %}
 
