CSS img and section added

--- a/src/hr_management/static/base.css
+++ b/src/hr_management/static/base.css
@@ -124,5 +124,17 @@ height: 100%;
     cursor: pointer;
 }
 
+img {
+    width: 750px;
+    height: auto;
+    object-fit: scale-down;
+  }
 
-
+section {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgb(220, 220, 220);
+}
