Help Center updated

--- a/src/hr_management/user/templates/help/admin_home_help.html
+++ b/src/hr_management/user/templates/help/admin_home_help.html
@@ -7,16 +7,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Help Center Admin</title>
+    <title>Help Center for Admininitrator</title>
 </head>
 
 <section>
     <h1 class="code-line" data-line-start="0" data-line-end="1">
-    <a id="Help_Center_Admin_0"></a>Help Center Admin
+    <a id="Help_Center_Admin_0"></a>Help Center for Admininitrator
     </h1>
     <p class="has-line-data" data-line-start="2" data-line-end="3">
-    Welcome to you home page:
+    <strong> Welcome to you home page: </strong>
     </p>
+    <h3> Administrator Dashboard </h3>
     <p class="has-line-data" data-line-start="4" data-line-end="5">
     Here we have 4 panels, each will send you to another place
     </p>
@@ -36,6 +37,12 @@
     email. <br />
     Here you can create, edit and delete employees.
     </p>
+    <h4> Search for an employee</h4>
+    <p class="has-line-data" data-line-start="10" data-line-end="11">
+    You can search for an employee by their name, email, or phone number.<br />
+    Please make sure you have all emplyees selected in the dropdown menu. If you don't you will not be able to search for all employees.
+    </p>
+
     <br>
     <img src={% static 'images/manage_employees.png' %} class="object-fit-scale border rounded" alt="HelpCenterAdmin"/>
     <hr>
